fixed page cut off (hopefully)

--- a/index.css
+++ b/index.css
@@ -268,7 +268,7 @@ div.classAdvance:hover{
 	background-color: rgba(0,0,0,.1);
 }
 div.padding150{
-	padding-top: 150px;
+	padding-bottom: 150px;
 }
 div.photoPadding{
 	width: 11%;
